# feederito

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  Trunk.toml  build.sh  index.html
frontend/: Cargo.toml  Makefile.toml
frontend/src/: aws.rs  entries.rs  feeds.rs  main.rs  util.rs
lambda/: Cargo.toml  Makefile.toml
lambda/src/: entries.rs  feeds.rs  main.rs  utils.rs
model/: Cargo.toml
model/src/: entry.rs  events.rs  feed.rs  lib.rs  util.rs
styler/: Cargo.toml
styler/src/: default.rs  main.rs
worker/: Cargo.toml
worker/src/: aws.rs  credentials.rs  crypto.rs  lib.rs  main.rs  util.rs  worker.rs
