[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "frontend"
#path = "src/main.rs"

#[[bin]]
#name = "worker"
#path = "src/worker_main.rs"

[dependencies]
dioxus = { version = "^0.2", features = ["fermi", "web", "html"] }
dioxus-web = "^0.2"

im = "^15"

futures-util = "^0.3"
futures = { version = "^0.3", default-features = false, features = ["std", "executor"]}
quick-xml = "^0.22"

anyhow = "^1.0"
serde = "^1.0"
serde_json = "^1.0"

console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.14"

wee_alloc = "^0.4"
gloo-worker = { version = "^0.2", features = ["futures"] }
gloo-storage = "^0.2"
wasm-bindgen = { version = "^0.2", default-features = false, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "^0.4" }
web-sys = { version = "^0.3", features = ["Storage"]}
js-sys = "^0.3"

model = { path = "../model" }
worker = { path = "../worker" }

#[lib]
#crate-type = ["cdylib", "rlib"]

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-Os']


[package.metadata.frontend.profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z' # 's' or 'z' to optimize "aggressively" for size
lto = true
