[package]
name = "styler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
tailwind-css = "^0.12"
serde = { version = "^1.0", features = ["serde_derive"] }
parcel_css = { version="1.0.0-alpha.24" }
parcel_selectors = { version="^0.24" }
cssparser = "^0.29"

